--- a/app/sass/layouts/_navbar.sass
+++ b/app/sass/layouts/_navbar.sass
@@ -4,9 +4,10 @@
     align-items: center
     display: flex
     text-decoration: none
+    font-family: Nunito Sans
 
-a,nav-link:hover
-    color: red
+.navbar-expand-lg .navbar-nav .nav-link:hover
+    color: $accent
 
 .btn__order
     order: 1
