--- a/app/layouts/header.html
+++ b/app/layouts/header.html
@@ -9,7 +9,7 @@
     <div class="container container--header">
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="col">
-        <a class="navbar-brand" href="#"><img src="/app/images/dest/Rectangle 4.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="images/dest/Rectangle 4.svg" alt=""></a>
         </div>
         <div class="col btn__order">
           <a class="btn">Sign Up</a>
