--- a/app/layouts/footer.html
+++ b/app/layouts/footer.html
@@ -5,9 +5,9 @@
             <div class="col-xl-4 col-md-12"><a href=""></a><img src="/app/images/dest/logo__footer.svg" alt=""></a></div>
             <div class="col-xl-4 col-md-12">
                 <div class="footer__social">
-                    <img src="/app/images/dest/twitter.svg" alt="" class="footer__img">
-                    <img src="/app/images/dest/facebook.svg" alt="" class="footer__img">
-                    <img src="/app/images/dest/linkedin.svg" alt="" class="footer__img">
+                    <img src="images/dest/twitter.svg" alt="" class="footer__img">
+                    <img src="images/dest/facebook.svg" alt="" class="footer__img">
+                    <img src="images/dest/linkedin.svg" alt="" class="footer__img">
                 </div>
             </div>
             <div class="col-xl-4 col-md-12">
